overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,9 @@ html,body{
   padding: 0;
   width: 100%;
 }
+*, *::before, *::after {
+  box-sizing: border-box;
+}
 
 body{
     font-family: 'Petrona', sans-serif;
@@ -76,6 +79,8 @@ body{
     text-decoration:none;
   }
   .nav{
+    width: 100%;
+    overflow-x: hidden;
     position: fixed;
     top:60px;
     left: 0;
@@ -85,6 +90,8 @@ body{
     transform: translateX(-100%);
     transition: all 0.3s ease-in-out;
     text-align: center;
+    max-width: 100%;
+    overflow-x: hidden;
   
   }
   
@@ -121,7 +128,7 @@ body{
 
 .filter-options{
   display: flex;
-  align-items: center;
+  flex-direction: column;
   gap: 3rem;
   font-size: 1rem;
   margin-bottom: 20px;
@@ -357,14 +364,10 @@ main, aside{
   }
 
 .profile-create-wrapper{
-    width: 100%;
-    margin: 50px auto;
-    padding: 0 20px;
     display: flex;
     flex-direction: column;
     gap: 2rem;
     box-sizing: border-box;
-
   }
 
 .post-form-container{
@@ -391,7 +394,7 @@ main, aside{
       margin: 90px auto 60px;
       padding: 0 20px;
       display: grid;
-      grid-template-columns: 2fr 2fr;
+      grid-template-columns: 2fr 1fr;
       gap: 3rem;
       align-items: stretch;
       box-sizing: border-box;
@@ -424,9 +427,7 @@ form label{
       font-family: 'Petrona', sans-serif;
     }
 form input, form textarea{
-      width: 100%;
       max-width: 100%;
-      box-sizing: border-box;
     }
   }
 
@@ -492,11 +493,11 @@ footer {
         align-items: stretch;
         max-width: 1200px;
         gap: 2rem;
-        margin: 3rem auto;
+        margin: auto;
         width: 100%
       }
   
-.top-section .welcome, .top-section.container {
+.top-section .welcome, .top-section .container {
         flex: 1;
         max-width: 70;
         margin: 0;
@@ -519,13 +520,12 @@ footer {
       height:80%
     }
 
-
-.search-page{
-  max-width: 700px;
-  margin-left: 2rem;
-  padding-top: 10px;
-  text-align: center;
-}
+.search-page {
+      width: 100%;
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 1rem;
+    }
 
 .search-page h1{ 
   font-size: 2.3rem;
@@ -677,7 +677,6 @@ footer {
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
     text-align: center;
     flex: 1;
-    max-width: 70;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -710,11 +709,15 @@ footer {
   }
 
   @media (min-width: 768px){
+    .filter-options{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 12px 20px
+    }
     .nav{
       position: static;
       background: none;
       transform: none;
-      width: auto;
       padding: 0;
       text-align: right;
     }
@@ -722,7 +725,7 @@ footer {
     .navlist{
       flex-direction: row;
       justify-content: flex-end;
-      column-gap: 40px;
+      gap: 40px;
   
   
     }
@@ -734,8 +737,10 @@ footer {
   
     .hamburger{
       display: none;
+
+    
     }
-  .results-list{flex-direction:row;margin:1rem;}
+  .results-list{flex-direction:row;margin:1rem; flex-wrap: wrap;}
   .mission-text{text-align:center;max-width: 75%; margin-left:auto; margin-right:auto;}
 
 .back-to-search{margin:2rem; display:flex; justify-content:center;}
@@ -774,3 +779,4 @@ footer {
     box-sizing: border-box;
     padding: 20px;
   }
+
